@@ -3,6 +3,8 @@ Changelog
 
 4.2-dev - (unreleased)
 ----------------------
+* Bug fix: Force unicode for Titles in getDeletableLanguages.py 
+  [prospchr fixes #5165]
 
 4.1 - (2011-11-18)
 ------------------
